[gd_scene load_steps=18 format=2]

[ext_resource path="res://Objects/CutsceneSystem-TextHandler.tscn" type="PackedScene" id=1]
[ext_resource path="res://Backgrounds/BG_Black.tscn" type="PackedScene" id=2]
[ext_resource path="res://SFX Files/textOlimac.wav" type="AudioStream" id=3]
[ext_resource path="res://Rooms/gameOver.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Resource files/TextBox-Inverted-Olimac.tres" type="SpriteFrames" id=5]
[ext_resource path="res://Sprites/bocetos y animaciones.png" type="Texture" id=6]
[ext_resource path="res://SFX Files/HD SFX - Got Hurt.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX Files/HD SFX - DEATH SOUND.wav" type="AudioStream" id=8]
[ext_resource path="res://Sprites/bocetos y animaciones 2.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 270, 108, 30, 36 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 0, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 30, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 60, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 90, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 120, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 150, 72, 30, 36 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), null ],
"loop": true,
"name": "explode",
"speed": 15.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
textWriter = NodePath("CutsceneSystem-TextHandler")
portraits = [ ExtResource( 5 ) ]
voices = [ ExtResource( 3 ) ]

[node name="BG" parent="." instance=ExtResource( 2 )]

[node name="CutsceneSystem-TextHandler" parent="." instance=ExtResource( 1 )]

[node name="playerDie" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
playing = true

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"
